添加数据访问PO和MyBatis的mapper映射文件

--- a/ChronAnt-app/pom.xml
+++ b/ChronAnt-app/pom.xml
@@ -28,7 +28,7 @@
         </dependency>
         <dependency>
             <groupId>cn.uhoc</groupId>
-            <artifactId>ChronAnt-infra</artifactId>
+            <artifactId>ChronAnt-infrastructure</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
