--- a/ChronAnt-infrastructure/pom.xml
+++ b/ChronAnt-infrastructure/pom.xml
@@ -9,7 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ChronAnt-infra</artifactId>
+    <artifactId>ChronAnt-infrastructure</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
