多阶段异步任务的创建接口，和单个任务获取接口

--- a/ChronAnt-domain/pom.xml
+++ b/ChronAnt-domain/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>ChronAnt-type</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cn.uhoc</groupId>
+            <artifactId>ChronAnt-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
