--- a/pom.xml
+++ b/pom.xml
@@ -40,33 +40,58 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <!-- Spring Boot Web Starter，包含用于开发 Web 应用的核心依赖，如嵌入 Tomcat、Spring MVC 等 -->
         </dependency>
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>3.0.4</version>
-        </dependency>
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <scope>runtime</scope>
+            <!-- MyBatis 与 Spring Boot 集成的 Starter，简化了 MyBatis 的配置和使用 -->
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+            <!-- Lombok 提供自动生成代码的注解（如 @Getter、@Setter、@Data），减少样板代码 -->
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+            <!-- Spring Boot 测试 Starter，包含 JUnit、Mockito、Spring Test 等测试相关库 -->
         </dependency>
         <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter-test</artifactId>
-            <version>3.0.4</version>
-            <scope>test</scope>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
+            <!-- MySQL 数据库驱动，用于与 MySQL 数据库通信 -->
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+            <!-- Apache Commons Lang3，提供增强的 Java 核心类工具，如字符串、数组、对象处理工具等 -->
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.5.5.Final</version>
+            <!-- MapStruct 核心库，用于在 Java 代码中实现 POJO（Plain Old Java Object）之间的自动映射。
+                 - 支持从一个对象映射到另一个对象
+                 - 提高转换逻辑的效率，减少样板代码
+                 - 适用于 DTO、Entity、VO 等之间的转换 -->
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>1.5.5.Final</version>
+            <scope>provided</scope>
+            <!-- MapStruct 编译器注解处理器，用于在编译时生成映射实现类。
+                 - 自动根据注解生成映射方法的实现代码
+                 - 此依赖为 MapStruct 的代码生成提供支持
+                 - 需要设置 scope 为 provided，因为仅在编译阶段需要 -->
+        </dependency>
+
     </dependencies>
 
     <build>
