--- a/ChronAnt-trigger/pom.xml
+++ b/ChronAnt-trigger/pom.xml
@@ -11,6 +11,24 @@
 
     <artifactId>ChronAnt-trigger</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>cn.uhoc</groupId>
+            <artifactId>ChronAnt-type</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.uhoc</groupId>
+            <artifactId>ChronAnt-domain</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.uhoc</groupId>
+            <artifactId>ChronAnt-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
